[package]
name = "certstreamrs"
description = "A library for streaming Certificate Transparency Log events from the certstream service"
version = "0.1.1"
authors = ["Andrew Gutekanst <andrew.gutekanst@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Andoryuuta/certstream-rs"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"
async-stream = "0.3.3"
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
url = "2.2.2"
futures-util = "0.3.21"
